update 11/17 enabling/disabling rows checking word availability clearing buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Wordy</string>
     <string name="submit">Submit</string>
     <string name="addw">Add Word</string>
-    <string name="clear">Clear</string>
+    <string name="clear">Clear Row</string>
+    <string name="clearG">Clear Game</string>
     <string name="restart">Restart</string>
     <string name="on">Hard Mode: On</string>
     <string name="off">Hard Mode: Off</string>
@@ -10,4 +11,6 @@
     <string name="add_word">Add Word</string>
     <string name="clear_database">Clear Database</string>
     <string name="go_back">Go Back</string>
+    <string name="hard_mode_on">Hard Mode: On</string>
+    <string name="hard_mode_off">Hard Mode: Off</string>
 </resources>
